--- a/index.html
+++ b/index.html
@@ -300,14 +300,17 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="footer-col first">
-                            <h6>Lorem Ipsum</h6>
-                            <p class="p-small">Sit amet facilisis magna etiam felis eget velit aliquet sagittis id. Mauris sit amet massa vitae tortor condimentum lacinia quis</p>
+                            <h6>DueTwo Software LLC</h6>
+                            <p class="p-small">DueTwo has embraced the broad goal of making the world a 
+                                better place. We will strive to do this through the software we create and 
+                                publish to the world. Each app, each piece of software, will allow each and 
+                                every person around the world to help make a difference in our ever-changing 
+                                society</p>
                         </div> <!-- end of footer-col -->
                         <div class="footer-col second">
                             <h6>Links</h6>
                             <ul class="list-unstyled li-space-lg p-small">
-                                <li>Important: <a href="terms.html">Terms & Conditions</a>, <a href="privacy.html">Privacy Policy</a></li>
-                                <li>Useful: <a href="#">Colorpicker</a>, <a href="#">Icon Library</a>, <a href="#">Illustrations</a></li>
+                                <li>Important: <a href="https://www.ethanmcg.com/">Ethan McGuinness Technology and Design</a></li>
                                 <li>Menu: <a href="#header">Home</a>, <a href="#projects">Projects</a>, <a href="#services">Services</a>, <a href="#contact">Contact</a></li>
                             </ul>
                         </div> <!-- end of footer-col -->
@@ -318,25 +321,14 @@
                                     <i class="fab fa-facebook-f fa-stack-1x"></i>
                                 </a>
                             </span>
-                            <span class="fa-stack">
-                                <a href="#your-link">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-twitter fa-stack-1x"></i>
-                                </a>
-                            </span>
-                            <span class="fa-stack">
-                                <a href="#your-link">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-pinterest-p fa-stack-1x"></i>
-                                </a>
-                            </span>
+
                             <span class="fa-stack">
                                 <a href="#your-link">
                                     <i class="fas fa-circle fa-stack-2x"></i>
                                     <i class="fab fa-instagram fa-stack-1x"></i>
                                 </a>
                             </span>
-                            <p class="p-small">Ac turpis egestas integer leor <a href="mailto:contact@site.com"><strong>contact@site.com</strong></a></p>
+                            <p class="p-small">Questions? Contact us at: <br /> <a href="mailto:info@duetwo.dev"><strong>info@duetwo.dev</strong></a></p>
                         </div> <!-- end of footer-col -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
@@ -350,7 +342,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <p class="p-small">Copyright © Your name</p>
+                        <p class="p-small">Copyright © DueTwo Software LLC</p>
                     </div> <!-- end of col -->
                 </div> <!-- enf of row -->
             </div> <!-- end of container -->
