removed services section for now

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#projects">Projects</a>
                         </li>
-                        <li class="nav-item">
+                      <!--   <li class="nav-item">
                             <a class="nav-link" href="#services">Services</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
@@ -157,97 +157,7 @@
         </div> <!-- end of basic-2 -->
         <!-- end of project 1 -->
 
-
-        <!-- Services -->
-        <div id="services" class="cards-1 bg-gray">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h2 class="h2-heading">Dictumst vestibulum rhoncus est</h2>
-                        <p class="p-heading">Interdum varius sit amet mattis vulputate enim nulla aliquet. Placerat vestibulum lectus mauris ultrices eros in. Habitant morbi tristique senectus et netus et malesuada</p>
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
-                <div class="row">
-                    <div class="col-lg-12">
-
-                        <!-- Card -->
-                        <div class="card">
-                            <div class="card-icon">
-                                <span class="fas fa-rocket"></span>
-                            </div>
-                            <div class="card-body">
-                                <h4 class="card-title">Pretium lectus</h4>
-                                <div class="card-text">Quam id leo in vitae turpis posuere morbi leo urna molestie at elemen tum eu facilisis sed cons der</div>
-                            </div>
-                        </div>
-                        <!-- end of card -->
-
-                        <!-- Card -->
-                        <div class="card">
-                            <div class="card-icon">
-                                <span class="far fa-clock"></span>
-                            </div>
-                            <div class="card-body">
-                                <h4 class="card-title">Varius quam</h4>
-                                <div class="card-text">Varius quam quisque id diam vel quam elementum pulvinar pulvinar etiam non quam lacus suspendisse</div>
-                            </div>
-                        </div>
-                        <!-- end of card -->
-
-                        <!-- Card -->
-                        <div class="card">
-                            <div class="card-icon">
-                                <span class="far fa-comments"></span>
-                            </div>
-                            <div class="card-body">
-                                <h4 class="card-title">Eliteg etgrav</h4>
-                                <div class="card-text">Pretium aenean pharetra magna ac placerat vestibulum lectus maur squis hendrerit dolor magna der</div>
-                            </div>
-                        </div>
-                        <!-- end of card -->
-
-                        <!-- Card -->
-                        <div class="card">
-                            <div class="card-icon">
-                                <span class="fas fa-camera"></span>
-                            </div>
-                            <div class="card-body">
-                                <h4 class="card-title">Facilisi nullam</h4>
-                                <div class="card-text">Vehicula ipsum a arcu cursus vitae nulla facilisi nullam vehicula ipsum a arcu cursus metus dictum</div>
-                            </div>
-                        </div>
-                        <!-- end of card -->
-
-                        <!-- Card -->
-                        <div class="card">
-                            <div class="card-icon">
-                                <span class="fas fa-chart-pie"></span>
-                            </div>
-                            <div class="card-body">
-                                <h4 class="card-title">Varius velphar</h4>
-                                <div class="card-text">Diam quam nulla porttitor massa id neque ultrices in iaculis nunc sed augue lacus viverra vitae congue</div>
-                            </div>
-                        </div>
-                        <!-- end of card -->
-
-                        <!-- Card -->
-                        <div class="card">
-                            <div class="card-icon">
-                                <span class="far fa-chart-bar"></span>
-                            </div>
-                            <div class="card-body">
-                                <h4 class="card-title">Duis tristique</h4>
-                                <div class="card-text">Sollicitudin nibh sit amet commodo nulla facilisi egestas fringilla phase llus faucibus scelerisque</div>
-                            </div>
-                        </div>
-                        <!-- end of card -->
-
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
-            </div> <!-- end of container -->
-        </div> <!-- end of cards-1 -->
-        <!-- end of services -->
-
+        <!-- Replace Services section here -->
 
         <!-- Contact -->
         <div id="contact" class="form-1">
