--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <link href="css/styles.css" rel="stylesheet">
         
         <!-- Favicon  -->
-        <link rel="icon" href="images/tabpic.png">
+        <link rel="icon" href="images/tabpic2.png">
     </head>
     <body data-bs-spy="scroll" data-bs-target="#navbarExample">
         
@@ -38,7 +38,7 @@
             <div class="container">
 
                 <!-- Image Logo -->
-                <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.png" alt="alternative"></a> 
+                <a class="navbar-brand logo-image" href="index.html"><img src="images/logo2.png" alt="alternative"></a> 
 
                 <!-- Text Logo - Use this if you don't have a graphic logo -->
                 <!-- <a class="navbar-brand logo-text" href="index.html">Name</a> -->
